# senko

./: .gitignore  DEV_SETUP.md  DOCS.md  README.md  THIRD_PARTY_LICENSES  build_backend.py  pyproject.toml
.github/workflows/: ci.yml  packaging.yml  publish.yml
evaluation/: README.md  evaluate.py  senko_pipeline.py
examples/: diarize.py
models/: README.md
scripts/: check_dist_artifacts.py  packaging_smoke.py  validate_release_version.py
senko/: config.py  diarizer.py  vad_coreml.py  warning_filters.py
senko/fbank_extractor/: CMakeLists.txt
senko/fbank_extractor/cpp/: fbank_extractor.cpp  fbank_extractor.h  fbank_wrapper.cpp
senko/fbank_extractor/include/: fbank_interface.h
senko/vad_coreml/: README.md  vad_lib.swift
senko/vad_local_pyannote/: __init__.py  audio.py  backend.py  checkpoint.py  model.py  postprocess.py
tests/: test_config.py  test_evaluation_pipeline.py  test_vad_local_pyannote.py
