[build-system]
requires = ["scikit-build-core", "setuptools-scm>=8"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "senko"
dynamic = ["version"]
description = "Very fast speaker diarization"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES"]
authors = [
    {name = "Hamza Qayyum", email = "mhamzaqayyum@icloud.com"}
]

keywords = [
    "speaker-diarization",
    "audio-processing",
    "speech-processing",
    "voice-activity-detection",
    "speaker-verification",
    "speech-analysis",
    "cuda",
    "gpu",
    "machine-learning",
    "audio-ai",
    "pyannote",
    "silero-vad",
    "speaker-embeddings"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
    "numpy",
    "scikit-learn",
    "umap-learn",
    "hdbscan",
    # Keep Numba and llvmlite explicit: Senko forces numba.njit(cache=True) at import time
    # to sharply reduce repeated cold clustering warmup across fresh processes.
    "numba",
    "llvmlite",
    "pyyaml",
    "soundfile",
    "termcolor",
    "psutil",
    "colour-science",
    "silero-vad; sys_platform != 'darwin'",
    "torch>=2.8,<3; sys_platform != 'darwin'",
    "coremltools; sys_platform == 'darwin'"
]

[project.optional-dependencies]
# CUDA 12 capable driver + CUDA compute capability < 7.5
nvidia-old = [
    "torch>=2.8,<3",
    "asteroid-filterbanks",
    "einops",
    "kaldifeat"
]

# CUDA 12 capable driver + CUDA compute capability >= 7.5
nvidia = [
    "torch>=2.8,<3",
    "asteroid-filterbanks",
    "einops",
    "kaldifeat",
    "cuml-cu12",
    "cudf-cu12",
]

# Same as nvidia, without RAPIDS and kaldifeat
nvidia-windows = [
    "torch>=2.8,<3",
    "asteroid-filterbanks",
    "einops",
]

# Same as nvidia-old, without kaldifeat
nvidia-old-windows = [
    "torch>=2.8,<3",
    "asteroid-filterbanks",
    "einops"
]


[project.urls]
Homepage = "https://github.com/narcotic-sh/senko"
Repository = "https://github.com/narcotic-sh/senko"
Issues = "https://github.com/narcotic-sh/senko/issues"

[tool.scikit-build]
minimum-version = "0.10"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = ["senko"]                  # where python source code is located to include in built wheel
cmake.source-dir = "."                      # dir where CMakeLists.txt is located (project root)
cmake.build-type = "Release"
build-dir = "build"                         # dir where CMake will place build artifacts during compilation
sdist.include = ["senko/_version.py"]
wheel.exclude = [
    "senko/fbank_extractor",
    "senko/vad_coreml"
]

[tool.scikit-build.editable]
mode = "redirect"                           # creates a .pth file pointing to senko/ for editable installs

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "20"
CMAKE_CXX_STANDARD_REQUIRED = "ON"

[tool.setuptools_scm]
version_file = "senko/_version.py"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"

[tool.setuptools_scm.scm.git]
describe_command = 'git describe --dirty --tags --long --match "v[0-9]*.[0-9]*.[0-9]*"'

[tool.cibuildwheel]
build = "cp311-*"
skip = "*-musllinux*"
test-command = "python {project}/scripts/packaging_smoke.py"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0" }

# PyTorch CUDA 12.9
[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

# PyTorch CUDA 12.8
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# PyTorch CUDA 12.6
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# NVIDIA RAPIDS package index
[[tool.uv.index]]
name = "nvidia-rapids"
url = "https://pypi.nvidia.com"
explicit = true

# Kaldifeat prebuilt wheels (flat HTML index)
[[tool.uv.index]]
name = "kaldifeat-cuda"
url = "https://csukuangfj.github.io/kaldifeat/cuda.html"
format = "flat"
explicit = true

[tool.uv]
# Prevent selecting multiple NVIDIA extras at once.
conflicts = [
    [
        { extra = "nvidia" },
        { extra = "nvidia-old" },
        { extra = "nvidia-windows" },
        { extra = "nvidia-old-windows" },
    ],
]

[tool.uv.sources]
# Override torch for:
#   nvidia -> use CUDA 12.9 torch
#   nvidia-windows -> use CUDA 12.8 torch
#   nvidia-old + nvidia-old-windows -> use CUDA 12.6 torch
torch = [
    { index = "pytorch-cu129", extra = "nvidia" },
    { index = "pytorch-cu128", extra = "nvidia-windows" },
    { index = "pytorch-cu126", extra = "nvidia-old" },
    { index = "pytorch-cu126", extra = "nvidia-old-windows" },
]
kaldifeat = { index = "kaldifeat-cuda" }

# RAPIDS packages
cuml-cu12 = { index = "nvidia-rapids" }
cudf-cu12 = { index = "nvidia-rapids" }
